--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -41,13 +41,24 @@
                         <a class="dropdown-item" href="javascript:void(0)" *ngIf="notificationCount === 0">Không có thông báo mới</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="javascript:void(0)" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="material-icons">person</i>
+                        <span *ngIf="currentUser" class="user-name">{{ currentUser.displayName || currentUser.email }}</span>
                         <p>
                             <span class="d-lg-none d-md-block">Account</span>
                         </p>
                     </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                        <div class="dropdown-item" *ngIf="currentUser">
+                            <strong>{{ currentUser.displayName || 'User' }}</strong><br>
+                            <small>{{ currentUser.email }}</small>
+                        </div>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="javascript:void(0)" (click)="signOut()">
+                            <i class="material-icons">exit_to_app</i> Đăng xuất
+                        </a>
+                    </div>
                 </li>
             </ul>
         </div>
