--- a/src/app/pages/task/task-board/task-board.component.html
+++ b/src/app/pages/task/task-board/task-board.component.html
@@ -1,135 +1,3 @@
-<div class="task-board">
-  <div class="board-header">
-    <div class="board-actions">
-      <mat-form-field appearance="outline" class="search-field">
-        <mat-icon matPrefix>search</mat-icon>
-        <input matInput placeholder="Search tasks" [(ngModel)]="searchText" (ngModelChange)="filterTasks()">
-      </mat-form-field>
-      <button mat-raised-button color="primary" (click)="openNewTaskDialog()" id="new-task-btn">
-        <mat-icon>add</mat-icon>
-        New Task
-      </button>
-      <button mat-stroked-button color="accent" (click)="exportToExcel()" class="export-btn">
-        <mat-icon>file_download</mat-icon>
-        Export Excel
-      </button>
-    </div>
-  </div>
-
-  <div class="board-columns">
-    <div class="board-column" *ngFor="let status of taskStatuses" [id]="status">
-      <div class="column-header">
-        <h3>{{ status | titlecase }}</h3>
-        <span class="task-count">{{ getTasksByStatus(status).length }}</span>
-      </div>
-      
-      <div class="task-list"
-           cdkDropList
-           [id]="status"
-           [cdkDropListData]="getTasksByStatus(status)"
-           [cdkDropListConnectedTo]="getConnectedLists()"
-           (cdkDropListDropped)="drop($event)">
-        
-        <div class="task-card" *ngFor="let task of getTasksByStatus(status)"
-             cdkDrag
-             [cdkDragData]="task"
-             [class.expanded]="isTaskExpanded(task.id)">
-          <div class="task-content">
-            <div class="task-header">
-              <div class="task-title-row">
-                <span class="task-title" (click)="toggleTaskExpansion(task.id)">
-                  {{ task.title }}
-                  <mat-icon class="expand-icon" *ngIf="task.subtasks.length > 0">
-                    {{ isTaskExpanded(task.id) ? 'expand_less' : 'expand_more' }}
-                  </mat-icon>
-                </span>
-                <div class="task-actions">
-                  <mat-icon [class]="'priority-' + task.priority.toLowerCase()" [matTooltip]="'Priority: ' + task.priority">
-                    {{ getPriorityIcon(task.priority) }}
-                  </mat-icon>
-                  <button mat-icon-button [matMenuTriggerFor]="taskMenu" class="task-menu-button">
-                    <mat-icon>more_vert</mat-icon>
-                  </button>
-                  <mat-menu #taskMenu="matMenu">
-                    <button mat-menu-item (click)="editTask(task)">
-                      <mat-icon>edit</mat-icon>
-                      <span>Edit</span>
-                    </button>
-                    <button mat-menu-item (click)="addSubTask(task)">
-                      <mat-icon>add</mat-icon>
-                      <span>Add Subtask</span>
-                    </button>
-                    <button mat-menu-item (click)="deleteTask(task)">
-                      <mat-icon color="warn">delete</mat-icon>
-                      <span>Delete</span>
-                    </button>
-                  </mat-menu>
-                </div>
-              </div>
-            </div>
-
-            <div class="task-description" *ngIf="task.description">
-              {{ task.description }}
-            </div>
-
-            <!-- Creator Info -->
-            <div class="task-creator">
-              <span class="creator-name">{{ task.creator.name }}</span>
-            </div>
-
-            <div class="task-labels" *ngIf="task.labels.length > 0">
-              <mat-chip-list>
-                <mat-chip *ngFor="let label of task.labels" [style.background-color]="label.color">
-                  {{ label.name }}
-                </mat-chip>
-              </mat-chip-list>
-            </div>
-
-            <!-- Subtasks (shown when expanded) -->
-            <div class="subtasks" *ngIf="isTaskExpanded(task.id) && task.subtasks.length > 0">
-              <mat-divider class="my-2"></mat-divider>
-              <h4>Subtasks</h4>
-              <div class="subtask-item" *ngFor="let subtask of task.subtasks">
-                <mat-checkbox [(ngModel)]="subtask.completed" (change)="toggleSubTaskCompletion(task, subtask)">
-                  {{ subtask.title }}
-                </mat-checkbox>
-                <img *ngIf="subtask.assignee" [src]="subtask.assignee.avatar" [alt]="subtask.assignee.name" 
-                     class="subtask-assignee" [matTooltip]="subtask.assignee.name">
-              </div>
-            </div>
-
-            <div class="task-checklist" *ngIf="task.checklist.length > 0 && isTaskExpanded(task.id)">
-              <mat-divider class="my-2"></mat-divider>
-              <div class="checklist-progress">
-                <mat-progress-bar mode="determinate" [value]="getChecklistProgress(task)"></mat-progress-bar>
-                <span class="progress-text">{{ getCompletedItems(task) }}/{{ task.checklist.length }}</span>
-              </div>
-              <mat-list dense>
-                <mat-list-item *ngFor="let item of task.checklist">
-                  <mat-checkbox [(ngModel)]="item.completed" (change)="updateChecklistItem(task, item)">
-                    {{ item.content }}
-                  </mat-checkbox>
-                </mat-list-item>
-              </mat-list>
-            </div>
-
-            <div class="task-footer">
-              <div class="assignees" *ngIf="task.assignees.length > 0">
-                <mat-icon class="assignee-icon">people</mat-icon>
-                <div class="assignee-names">
-                  <span *ngFor="let assignee of task.assignees; let i = index">
-                    {{ assignee.name }}<span *ngIf="i < task.assignees.length - 1">, </span>
-                  </span>
-                </div>
-              </div>
-              <div class="deadline" *ngIf="task.deadline">
-                <mat-icon>event</mat-icon>
-                <span>{{ task.deadline | date:'MMM d' }}</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="flow-work">
+  <!-- Flow Work is empty -->
 </div> 
